--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,6 +1,63 @@
 .footer {
-    background-color: #0B132B;
-    color: white; 
-    padding: 5px;
+    background-color: #2c3e50;
+    color: #ecf0f1;
+    padding: 10px 10px;
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-around;
+    align-items: center;
+    text-align: center;
+    gap: 30px;
+}
+
+.footer-section {
+    max-width: 450px;
+    flex: 1;
+    min-width: 200px;
+}
+
+.footer-section h4 {
+    margin-bottom: 15px;
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
+.footer-section ul {
+    list-style: none;
+    padding: 0;
+}
+
+.footer-section ul li {
+    margin: 10px 0;
+}
+
+.footer-section a {
+    color: #ecf0f1;
+    text-decoration: none;
+}
+
+.footer-section a:hover {
+    text-decoration: underline;
+}
+
+.social-icons {
+    display: flex;
+    justify-content: center;
+    gap: 15px;
+}
+
+.social-icons a {
+    font-size: 26px;
+    color: #ecf0f1;
+    transition: color 0.3s;
+}
+
+.social-icons a:hover {
+    color: #3498db;
+}
+
+.copyright {
+    flex-basis: 100%;
+    margin-top: 20px;
     text-align: center;
 }
