--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,19 +1,18 @@
 .footer {
     background-color: #2c3e50;
     color: #ecf0f1;
-    padding: 10px 10px;
+    padding: 20px;
     display: flex;
-    flex-wrap: nowrap;
-    justify-content: space-around;
-    align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: flex-start;
     text-align: center;
-    gap: 30px;
 }
 
 .footer-section {
+    flex: 1 1 200px;
     max-width: 450px;
-    flex: 1;
-    min-width: 200px;
+    margin: 10px;
 }
 
 .footer-section h4 {
