feat: Profile y Products list

--- a/src/Pages/Account/Account.css
+++ b/src/Pages/Account/Account.css
@@ -1,16 +1,11 @@
-.account {
-    padding: 32px;
-    background-color: #f4f4f4;
-    border-radius: 5px;
-    max-width: 400px;
-    margin: 32px auto;
+.container{
+    max-width: 2336px !important;
 }
 
-.account h1 {
-    color: #1C2541;
-    margin-bottom: 16px;
+/* .fondo-banner{
+    background-color: red;
 }
 
-.account p {
-    color: #333;
-}
+.user-avatar{
+    background-color: blue;
+} */
