feat: funcionalidad y cambio
- Funcionalidad para Ver Producto
- Ajuste de margin para el user-profile-img MARGIN

--- a/src/Pages/Account/Account.css
+++ b/src/Pages/Account/Account.css
@@ -2,6 +2,14 @@
     max-width: 2336px !important;
 }
 
+.user-avatar-margin{
+    margin-left: 60px;
+}
+
+.margin-perso{
+    margin-bottom: 50px;
+}
+
 /* .fondo-banner{
     background-color: red;
 }
